<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="18dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button_back"
        android:src="@drawable/ic_arrow_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/plus_jakarta_sans_semibold"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/tulis_huruf"
        android:textColor="#00ACC1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#4D4D4D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/plus_jakarta_sans"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/tulis_huruf_tersebut_sesuai_n_dengan_bentuknya"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.nara.bacayuk.writing.letter.tracing.lowercase.DrawingLetterLowercaseView
        android:id="@+id/tracing_canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="180dp"
        app:layout_constraintBottom_toTopOf="@+id/icon_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <LinearLayout
        android:id="@+id/icon_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/btn_pencil"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/button_pencil"
            android:src="@drawable/ic_pencil" />

        <ImageView
            android:id="@+id/btn_eraser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/button_eraser"
            android:src="@drawable/ic_eraser" />

        <ImageView
            android:id="@+id/btn_reload"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/button_reload"
            android:src="@drawable/ic_reload" />

    </LinearLayout>

    <ImageView
        android:id="@+id/btn_play_tutorial"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/button_play_animation"
        android:src="@drawable/ic_tutorial"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/plus_jakarta_sans_semibold"
        android:text="@string/lanjutkan"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/button_letter"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
